<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculatorTitle"
        android:id="@+id/calculatorTitle"

        />

    <EditText
        android:id="@+id/gradEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintGrad"

        />
    <EditText
        android:id="@+id/minutesEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintMinutes"
       />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCalculateTo"
        android:id="@+id/buttonCalculateTo"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultCalculatorTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calculatedResult"
            />
    </LinearLayout>



</LinearLayout>