<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.ur.mi.android.project_sunset.AddWaypointScreen"
    android:layout_marginTop="24dp"
    android:background="@color/backgroundFlatUIdark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addWaypointDescription"
        android:text="@string/labelAddWaypointDescription"
        android:layout_margin="13dp"
        android:textColor="@color/TextFlatUIWhite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addWaypointName"
        android:layout_below="@+id/addWaypointDescription"
        android:layout_margin="13dp"
        android:hint="@string/hintAddWaypointName"
        android:inputType="textCapCharacters"
        android:textColor="@color/TextFlatUIWhite"
        android:textColorHint="@color/TextFlatUIWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/longLatLayout"
        android:layout_below="@+id/addWaypointName"
        android:layout_margin="13dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addWaypointLatitude"
        android:layout_marginTop="13dp"
        android:hint="@string/hintAddWaypointLatitude"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@color/TextFlatUIWhite"
        android:textColorHint="@color/TextFlatUIWhite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addWaypointLongitude"
        android:hint="@string/hintAddWaypointLongitude"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="13dp"
        android:textColor="@color/TextFlatUIWhite"
        android:textColorHint="@color/TextFlatUIWhite"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addWaypointButton"
        android:layout_below="@id/longLatLayout"
        android:layout_margin="13dp"
        android:text="@string/buttonAddWaypoint"
        android:background="@color/buttonFlatUIblue"
        android:textColor="@color/TextFlatUIWhite"/>

</RelativeLayout>
