<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/informationWaypoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informationWaypoint"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/WaypointNameEdit"
        android:hint="@string/hintWaypoint"
        android:inputType="textCapCharacters"
        android:layout_below="@+id/informationWaypoint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:id="@+id/waypointLongitudeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintLongitude"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/WaypointNameEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/waypointLatitudeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintLatitude"
        android:layout_below="@+id/waypointLongitudeEdit"
        android:layout_alignLeft="@+id/waypointLongitudeEdit"
        android:layout_alignStart="@+id/waypointLongitudeEdit"
        android:inputType="numberDecimal|numberSigned"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/arrivalLayout"
        android:layout_below="@id/waypointLatitudeEdit"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrivaltime"
            android:text="Zeitpunkt des Erreichens: "
            android:layout_weight="0.50"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/setTimeButton"
            android:text="Zeitpunkt festlegen"
            android:layout_weight="0.50"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_below="@id/arrivalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/buttonCalculator"
            android:id="@+id/calculatorButton" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:id="@+id/nextWaypointButton"
            android:text="@string/buttonNextWaypoint" />
    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/buttonCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/buttonCalculate"/>

    </LinearLayout>



</RelativeLayout>